# monorepo

backend/: openapi.yml  package-lock.json  package.json  pnpm-lock.yaml
contracts/rent_wallet/: Cargo.toml
contracts/rent_wallet/src/: e2e_rent_flow_tests.rs  lib.rs
contracts/rent_wallet/test_snapshots/e2e_rent_flow_tests/: e2e_pay_rent_success_and_rollback_on_staking_failure.1.json
contracts/rent_wallet/test_snapshots/formal_properties/tests/: inv1_funds_conservation.1.json  inv2_no_negative_balance.1.json  inv3_paused_blocks_mutation.1.json  inv4_admin_only_mutation.1.json  inv5_admin_transfer_consistency.1.json  inv7_zero_amount_rejected.1.json  inv8_debit_boundedness.1.json  inv9_credit_monotonicity.1.json
contracts/rent_wallet/test_snapshots/test/: admin_can_pause_and_unpause.1.json  balance_reflects_credit_and_debit_operations.1.json  balance_returns_zero_for_new_user.1.json  cancel_upgrade_clears_pending.1.json  credit_accumulates_balance.1.json  credit_increases_balance.1.json  debit_can_reduce_balance_to_zero.1.json  debit_decreases_balance.1.json  debit_fails_when_balance_is_zero.1.json  debit_fails_with_insufficient_balance.1.json  debit_fails_with_negative_amount.1.json  execute_upgrade_fails_when_delay_not_met.1.json  init_initializes_empty_balances.1.json  init_sets_admin.1.json  invariant_balance_never_negative_after_failed_debit.1.json  paused_contract_blocks_credit_and_debit.1.json  propose_upgrade_fails_if_already_pending.1.json  propose_upgrade_stores_pending_hash.1.json  version_matches_contract_version.1.json
frontend/: next.config.mjs  (+1 more)
(+52 files in other folders)
