[package]
name = "rent_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.7"

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }
rent_payments = { path = "../rent_payments" }
staking_rewards = { path = "../staking_rewards" }
